<resources>
    <string name="app_name">Chariot Driver</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email_invalid">Invalid email, please check the email address</string>
    <string name="login_fail">Invalid driver name or password. Please try again</string>
    <string name="no_network_title">No network!</string>
    <string name="no_network_msg">You are not connected to internet. Please connect to internet and try again</string>
    <string name="text_ok">OK</string>
    <string name="name">Your name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="required_fields">All fields are required</string>
    <string name="passwd_mismatch">Passwords do not match</string>
    <string name="license_no">License Number</string>
    <string name="car_model">Car model</string>
    <string name="car_license_plate">Car license plate number</string>
    <string name="drStatusAvl">Available</string>
    <string name="drStatus">DriverStatus</string>
    <string name="lbltitle">Title</string>
    <string name="lbltext">Text</string>
    <string name="title_logout">Logout</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="logout_conf">Logout</string>
    <string name="logout_msg">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="activeStatusText">You are in queue</string>
    <string name="inactiveStatus">Go Active to get rides...</string>
    <string name="inactiveButton">Go Inactive</string>
    <string name="activeButton">Go Active</string>
    <string name="reachedCustomerButton">Reached Customer?</string>
    <string name="goPickupCustomer">Go pickup customer</string>
    <string name="goDestination">Start driving to destination</string>
    <string name="tripCompleteButton">Reached Destination?</string>
    <string name="driver_arrived">You are at pickup location.</string>
    <string name="driver_arrived_text">You reached user pickup loation. Look for User.</string>
    <string name="destination_reached_title">Reached destination</string>
    <string name="destination_reached_text">You have arrived at the destination. Get the payment from guest. Thanks.</string>
    <string name="debug_mode_summ">Only for testing and demo purpose. Dont enable for production.</string>
    <string name="enable_debug_mode">Enable Debug Mode</string>
    <string name="action_settings">Settings</string>
</resources>
